--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Hydra Template
+title: Music for Mind
 url: "https://proud-alligator.cloudvent.net"
 baseurl:
 google_analytics_key:
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: Music for Mind social action project
 author:
   name:
   email:
@@ -18,7 +18,7 @@ author:
 social:
   name: Hydra Template
   links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+    - https://instagram.com/ncs_lancaster
 
 # -----
 # Build
@@ -45,24 +45,12 @@ defaults:
           height: 2500
   - scope:
       path: ""
-      type: "staff_members"
-    values:
-      _options:
-        image_path:
-          width: 600
-          height: 600
-  - scope:
-      path: ""
     values:
       layout: "page"
   - scope:
       path: "index.html"
     values:
       layout: "default"
-  - scope:
-      path: "contact.html"
-    values:
-      full_width: true
 
 jekyll-archives:
   enabled:
@@ -86,21 +74,4 @@ exclude:
 
 _select_data:
   social_icons:
-    - Facebook
     - Instagram
-    - LinkedIn
-    - Pinterest
-    - Tumblr
-    - Twitter
-    - YouTube
-    - RSS
-
-_comments:
-  map: Update the map location and display settings.
-  latitude: Coordinates for the center marker on the map.
-  longitude: Coordinates for the center marker on the map.
-  zoom: The zoom level for the map.
-  pricing_table: Update the information in the pricing tables.
-  highlight: Emphasis the text
-  color: The background colour used in the plan name and call to action.
-  new_window: Open link in new window
